--- a/index.html
+++ b/index.html
@@ -6,113 +6,78 @@
 <title>Hotel Greenfield Regency | Shimla</title>
 
 <style>
-:root {
-  --green: #0f5132;
-  --light-green: #d1e7dd;
-  --gold: #ffc107;
-  --dark: #1c1c1c;
-}
-
 body {
   margin: 0;
-  font-family: "Segoe UI", sans-serif;
-  background: #f4fdf8;
-  color: #222;
+  font-family: Arial, sans-serif;
+  background: #0b2e1c;
+  color: #fff;
 }
 
 header {
-  background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.6)),
-  url("https://images.unsplash.com/photo-1501117716987-c8e1ecb2105f");
-  background-size: cover;
-  color: white;
   padding: 100px 20px;
   text-align: center;
+  background: linear-gradient(to right, #14532d, #1f7a4d);
 }
 
 header h1 {
-  font-size: 3.2rem;
-  margin-bottom: 10px;
-  color: var(--gold);
-}
-
-header p {
-  font-size: 1.2rem;
+  font-size: 3.5rem;
+  color: #ffd700;
 }
 
 section {
-  max-width: 1000px;
+  max-width: 900px;
   margin: auto;
-  padding: 60px 20px;
+  padding: 50px 20px;
 }
 
-h2 {
-  color: var(--green);
-  font-size: 2rem;
-}
-
-.amenities {
-  background: var(--light-green);
+.card {
+  background: #ffffff;
+  color: #000;
+  padding: 30px;
   border-radius: 10px;
 }
 
-.amenities ul {
-  list-style: none;
-  padding: 0;
-}
-
-.amenities li {
-  background: white;
-  margin: 10px 0;
-  padding: 15px;
-  border-left: 6px solid var(--green);
-  border-radius: 5px;
+label {
   font-weight: bold;
 }
 
-.form-section {
-  background: var(--dark);
-  color: white;
-  border-radius: 10px;
-}
-
-form {
-  display: grid;
-  gap: 15px;
-  margin-top: 20px;
-}
-
-input, select, button {
+input, button {
+  width: 100%;
   padding: 12px;
-  font-size: 1rem;
+  margin-top: 8px;
+  margin-bottom: 20px;
   border-radius: 5px;
   border: none;
 }
 
-input, select {
-  width: 100%;
+input[type=range] {
+  accent-color: #198754;
 }
 
 button {
-  background: var(--gold);
-  font-weight: bold;
+  background: #198754;
+  color: white;
+  font-size: 1.1rem;
   cursor: pointer;
 }
 
 button:hover {
-  background: #ffb300;
+  background: #14532d;
 }
 
-.success {
-  margin-top: 15px;
-  color: #00ff99;
-  font-weight: bold;
+.result {
+  background: #e9f7ef;
+  color: #14532d;
+  padding: 20px;
+  border-radius: 8px;
+  margin-top: 20px;
+  display: none;
 }
 
 footer {
-  background: var(--green);
-  color: white;
+  background: #14532d;
   text-align: center;
-  padding: 20px;
+  padding: 15px;
 }
 </style>
 </head>
@@ -121,71 +86,72 @@ footer {
 
 <header>
   <h1>Hotel Greenfield Regency</h1>
-  <p>Boutique Hotel in Shimla, India</p>
-  <p><em>Perfect for young travelers & families</em></p>
+  <p>Boutique Hotel in Shimla | For Young & Family Travelers</p>
 </header>
 
 <section>
-  <h2>About Us</h2>
-  <p>
-    Hotel Greenfield Regency is a boutique hotel nestled in the scenic hills of Shimla.
-    Designed for young travelers and families, we combine modern comfort with nature.
-  </p>
-</section>
+  <div class="card">
+    <h2>Find Your Perfect Stay</h2>
 
-<section class="amenities">
-  <h2>Rooms & Amenities</h2>
-  <ul>
-    <li>Mountain-view luxury rooms</li>
-    <li>Free high-speed Wi-Fi</li>
-    <li>Family-friendly spaces</li>
-    <li>Local cuisine restaurant</li>
-    <li>Close to Mall Road</li>
-  </ul>
-</section>
+    <label>Name</label>
+    <input type="text" id="name" placeholder="Enter your name">
 
-<section class="form-section">
-  <h2>Check Your Stay Preferences</h2>
-  <p>Tell us about your stay — we’ll get back to you!</p>
+    <label>Email</label>
+    <input type="email" id="email" placeholder="Enter your email">
 
-  <form id="bookingForm">
-    <input type="text" id="name" placeholder="Full Name" required>
-    <input type="email" id="email" placeholder="Email Address" required>
+    <label>Budget per Night (₹)</label>
+    <input type="range" min="2000" max="8000" step="500" id="budget">
+    <p><strong>Selected Budget:</strong> ₹<span id="budgetValue">5000</span></p>
 
-    <select id="price" required>
-      <option value="">Select Price Range</option>
-      <option>₹2,000 – ₹4,000 per night</option>
-      <option>₹4,000 – ₹6,000 per night</option>
-      <option>₹6,000+ per night</option>
-    </select>
+    <button onclick="recommendRoom()">Get Recommendation</button>
 
-    <button type="submit">Submit Details</button>
-  </form>
-
-  <div class="success" id="successMsg"></div>
+    <div class="result" id="resultBox"></div>
+  </div>
 </section>
 
 <footer>
-  <p>© 2026 Hotel Greenfield Regency | Shimla, India</p>
+  © 2026 Hotel Greenfield Regency | Shimla, India
 </footer>
 
 <script>
-document.getElementById("bookingForm").addEventListener("submit", function(e) {
-  e.preventDefault();
+const budgetSlider = document.getElementById("budget");
+const budgetValue = document.getElementById("budgetValue");
 
+budgetSlider.oninput = function () {
+  budgetValue.textContent = this.value;
+};
+
+function recommendRoom() {
   const name = document.getElementById("name").value;
   const email = document.getElementById("email").value;
-  const price = document.getElementById("price").value;
+  const budget = budgetSlider.value;
+
+  if (!name || !email) {
+    alert("Please enter your name and email.");
+    return;
+  }
+
+  let roomType = "";
+  if (budget <= 3000) {
+    roomType = "Standard Room – Cozy & Affordable";
+  } else if (budget <= 5000) {
+    roomType = "Deluxe Room – Mountain View";
+  } else {
+    roomType = "Premium Family Suite – Luxury Stay";
+  }
+
+  document.getElementById("resultBox").style.display = "block";
+  document.getElementById("resultBox").innerHTML = `
+    <h3>Thank you, ${name}!</h3>
+    <p>Based on your budget, we recommend:</p>
+    <strong>${roomType}</strong>
+    <p>We will contact you soon at <strong>${email}</strong>.</p>
+  `;
 
   localStorage.setItem("guestName", name);
   localStorage.setItem("guestEmail", email);
-  localStorage.setItem("priceRange", price);
-
-  document.getElementById("successMsg").innerText =
-    "Thank you, " + name + "! Your preferences have been saved.";
-
-  this.reset();
-});
+  localStorage.setItem("guestBudget", budget);
+}
 </script>
 
 </body>
